--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <!-- TODO: Include Font Awesome file here -->
-    <!-- TODO: Include Google Fonts file here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Scribbler</title>
+    <link href="https://fonts.googleapis.com/css?family=Montez|Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
-
 <body>
-    <!-- TODO: Include all your code for the header and home page here -->
-</body>
+    <header id="header">
+        <div id="logo">
+            <h1>Scribbler</h1>
+            <h2>Explore, Imagine, Create</h2>
+        </div>
+        <div id="auth-buttons">
+            <button id="signUpBtn">Sign Up</button>
+            <button id="signInBtn">Sign In</button>
+        </div>
+    </header>
+    <main>
+        <div id="center-buttons">
+            <button id="allPostsBtn">All Posts</button>
+            <button id="createPostBtn">Create Post</button>
+        </div>
+    </main>
 
+    <div id="signUpModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Sign Up</h2>
+            <form id="signUpForm">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Enter your username"><br><br>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password"><br><br>
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-enter your password"><br><br>
+                <input type="submit" value="Sign Up">
+            </form>
+        </div>
+    </div>
+
+    <div id="signInModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Welcome Back!</h2>
+            <input type="text" placeholder="Enter your username">
+            <input type="password" placeholder="Enter your password">
+            <button id="signInSubmit">Sign In</button>
+            <p>Not a member? <a href="#" id="switchToSignUp">Sign Up</a></p>
+        </div>
+    </div>
+
+    <div id="createPostModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Pen Your Post</h2>
+            <label for="postTitle">Title</label>
+            <input type="text" id="postTitle" placeholder="Enter title of your post">
+            <label for="postContent">Contents</label>
+            <textarea id="postContent" placeholder="Enter the contents of your post"></textarea>
+            <button id="createPostSubmit">Create</button>
+        </div>
+    </div>
+
+    <script src="scripts/index.js"></script>
+
+</body>
 </html>
