fixed create post button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="modal-content new-post-modal-content">
             <div class="flex-container">
                 <h1 class="modal-heading">Pen Your Post</h1>
-                <span onclick="closeNewPostDialog()" class="close-btn">
+                <span onclick="closeNewPostModal()" class="close-btn">
                     <i class="fa fa-times" aria-hidden="true"></i>
                 </span>
             </div>
